# IRAS-Kinova

./: .gitignore  LICENSE  README.md  gen3_2f85.urdf  test_kinova.urdf
sim2real/: Readme.md
sim2real/policies/gripper/: env.yaml
sim2real/policies/no_gripper/: env.yaml  policy.pt
sim2real/policies/no_vel/: env.yaml  policy.pt
sim2real/policies/reach/: env.yaml  policy.pt
sim2real/policies/reach2/: env.yaml  policy.pt
sim2real/pretrained_models/reach/: reach_gen3_2f85.pth
sim2real/pretrained_models/reach2/: env.yaml  policy.pt
sim2real/pretrained_models/reach3/: agent.yaml  env.yaml  policy.pt
sim2real/pretrained_models/reach4/: env.yaml  policy.pt
sim2real/scripts/sim2real/: run_task_reach.py
sim2real/scripts/sim2real/controllers/: policy_controller.py
sim2real/scripts/sim2real/robots/: gen3.py
sim2real/scripts/sim2real/utils/: config_loader.py
src/: robotiq_2f_140_gripper.urdf  robotiq_2f_85_gripper.urdf
src/gen3/gen3_controllers/: package.xml  setup.cfg  setup.py
src/gen3/gen3_controllers/gen3_controllers/: gen3_reach.py  old.py  pc_new.py  policy_controller.py
src/gen3/gen3_controllers/gen3_controllers/isaac/: gen3_reach_isaac.py  policy_controller_isaac.py
src/gen3/gen3_controllers/gen3_controllers/no_gripper/: gen3_reach_nogripper.py  policy_controller_nogripper.py
src/gen3/gen3_cpp/: CMakeLists.txt  package.xml
src/gen3/gen3_cpp/msg/: ParamDict.msg  Params.msg
src/gen3/gen3_cpp/src/: gen3_reset.cpp
src/gen3/gen3_cpp/srv/: ParamSkill.srv
src/gen3/gen3_py/: package.xml  setup.cfg  setup.py
src/gen3/gen3_py/gen3_py/: ee_publisher.py  move_arm_bt.py
src/gen3/gen3_py/launch/: gen3.launch.py
src/gen3/gen3_skills/: README.md  package.xml  setup.cfg  setup.py
src/gen3/gen3_skills/gen3_skills/: skills.py  skills_manager.py  utils.py
src/gen3/gen3_skills/gen3_skills/skills/: skills.py
src/gen3/gen3_skills/launch/: gen3_skills.launch.py
src/kinova_cpp/: CMakeLists.txt  package.xml
src/kinova_py/: package.xml  setup.cfg  setup.py
src/kinova_py/kinova_py/: move_arm_bt.py
src/kinova_py/launch/: gen3.launch.py
